--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ DerivedData
 # Bundler
 .bundle
 
+# SPM
+.swiftpm
+
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
